--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
       - uses: popsiclestick/gist-sync-action@v1.2.0
         id: sync
         with:
-          auth: ${{ secrets.GIST_TOKEN }}
+          auth: ${{ secrets.GIST_SECRET }}
           gist_url: https://gist.github.com/djschlicht/c02bff44abdf6cbd137f9479d0c9bb9f
-          gist_title: API Documentation
+          gist_title:  API Documentation Markdown
           gist_description: Documentation for HAPI-D API
           github_file: ./README.md
