--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           auth: ${{ secrets.GIST_SECRET }}
           gist_url: https://gist.github.com/djschlicht/c02bff44abdf6cbd137f9479d0c9bb9f
-          gist_title:  API Documentation Markdown
+          gist_title:  api_docs.md
           gist_description: Documentation for HAPI-D API
           github_file: ./README.md
